[tool.poetry]
name = "ta-helper"
version = "0.1.0"
description = ""
authors = ["RoninTech"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
apprise = "^1.9.0"
html2text = "^2024.2.26"
requests = "^2.32.3"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
setuptools = "^75.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
